--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PositiveWeb3Security",
-  "name": "Positive Web3 Security",
+  "short_name": "PositiveSecurity",
+  "name": "Positive Security",
   "icons": [
     {
       "src": "favicon.ico",
