--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@vercel/analytics": "^1.0.1",
     "framer-motion": "^10.12.18",
     "i18next": "^23.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
